--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v7-appcompat.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/google-play-services.jar"/>
+	<classpathentry kind="con" path="com.soyatec.uml.CONTAINER"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
