--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,12 +15,15 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 	<uses-feature android:required="true" android:glEsVersion="0x00020000"/>
-    
+     
     <application
+        
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps" /> 
+     
         <activity
             android:name="com.example.wearetherunningman.MainActivity"
             android:label="@string/app_name" >
