--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../appcompat_v7
-android.library.reference.2=../google-play-services_lib
+android.library.reference.1=../../../KimHaeYeon/workspace/google-play-services_lib
+android.library.reference.2=../../../KimHaeYeon/workspace/appcompat_v7
